# CUDA-SOM

./: .gitignore  CMakeLists.txt  COMPILAZIONE.txt  Idee.txt  README.md  Results.ods  SOM.cu  Samples  Statistiche  TOREMOVE.txt  Testfile  a.out  ciao.txt  dati_bicocca_leucemia.txt  dati_bicocca_melanoma.txt  som-seqdata.r  test1
EsamplesData/: .RData  .Rhistory  Fibroid_264000x4.txt  leucemia_116x14.txt  leucemia_scaled  som-seqdata.r
Risultati/: TEMPI
SOMCPU/: SOM.cpp  cmdline.c  cmdline.h  distance_functions.cpp  lineparser.ggo  update_functions.cpp  utility_functions.cpp
Test/: SOM.cu  Samples  a.out
src/: SOM.cu  batch_learning.cu  batch_learning.h  cmdline.c  cmdline.h  distance_kernels.cu  distance_kernels.h  lineparser.ggo  update_kernels.cu  update_kernels.h  utility_functions.cpp  utility_functions.cu  utility_functions.h
